# MindNote

./: pyproject.toml
config/: settings.py  urls.py
diarys/: admin.py  forms.py  models.py  urls.py  validate_data.py  validators.py  views.py
diarys/migrations/: 0001_initial.py  0002_alter_page_content_alter_page_dt_created_and_more.py
diarys/templates/diarys/: base.html  index.html  info.html  page_confirm_delete.html  page_detail.html  page_form.html  page_list.html
